--- a/package.json
+++ b/package.json
@@ -8,17 +8,26 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.1.3",
+    "bootstrap": "^5.2.2",
     "core-js": "^3.8.3",
+    "cors": "^2.8.5",
+    "leaflet": "^1.9.2",
+    "leaflet.markercluster": "^1.5.3",
+    "swr": "^1.3.0",
     "vue": "^3.2.13"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
+    "@types/leaflet": "^1.9.0",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "node-sass": "^8.0.0",
+    "sass-loader": "^13.2.0"
   },
   "eslintConfig": {
     "root": true,
